[package]
name = "onc"
version = "0.1.0"           
edition = "2021" 

[dependencies]
rusqlite = "=0.31.0"
ash ={version= "0.38" , features = ["linked"]}        # vulkan
bson = "2.15.0"
log = "0.4" # for debug logs in vulkan
serde_json = "1.0.142"
regex = "1.11.1"
xxhash-rust = "0.8.15"
memmap2 = "0.9.8"

[[bin]]
name = "onc"
path = "src/main.rs"